kubernetes/utility/apps/kube-system/external-secrets/app/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-bws
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: bitwarden-sdk-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
            k8s:io.kubernetes.pod.namespace: kube-system
